resources/aws_template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: 
  'Launches EC2 instance for WebApp "Roman Numerals Converter". allows HTTP.'

Parameters:
  KeyPairParameter:
    Description: Select a valid key pair.
    Type: 'AWS::EC2::KeyPair::KeyName'
    Default: myAWSPracticeKeyPair


Resources:
  EC2WebServerNumeralConverter:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0bdd88bd06d16ba03
      InstanceType: t3.micro
      KeyName: !Ref KeyPairParameter
      SecurityGroups: 
        - !Ref SecurityGroupSshHttp
      Tags: 
        - Key: Name
          Value: Web Server of RomanNumeralConverter Stack
      UserData: 
        !Base64 
          !Sub |
            #!/bin/bash
            echo "Starting web service setup..." >> /tmp/user-data.log.
            yum update -y
            yum install git -y
            cd /home/ec2-user
            git clone https://github.com/I-Barth/Project-001_Roman-NumeralsConverter.git
            sudo cp -r /home/ec2-user/Project-001_Roman-NumeralsConverter/* /var/www/html/
            yum install -y python3 python3-pip
            pip3 install Flask
            nohup python3 /var/www/html/app.py --host 0.0.0.0 --port 8080 &
            echo "Web service setup complete. Application running on port 8080." >> /tmp/user-data.log


  SecurityGroupSshHttp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Grants HTTP and SSH Access
      GroupName: NameFor_SecurityGroup_SSH_HTTP
      SecurityGroupIngress: 
        - CidrIp: 0.0.0.0/0
          Description: ssh rule
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          Description: http rule
          FromPort: 80
          IpProtocol: tcp          
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          Description: http rule
          FromPort: 8080
          IpProtocol: tcp          
          ToPort: 8080           


Outputs:
  WebsiteURL:
    Description: The URL for the Roman Numerals Converter
    Value: !Sub 'http://${EC2WebServerNumeralConverter.PublicDnsName}'
